@@ -1,3 +1,8 @@
+2007-12-14  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems/commands/query_command.rb:  Don't display duplicate
+	version numbers.  Bug #15828 by Tim Fletcher.
+
 2007-12-13  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/commands/server_command.rb:  Fix --no-daemon.  Bug by
